[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_yellow.png" type="Texture" id=2]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://GFX/Interface/Fonts/kenvector_future_thin.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[node name="Menu" type="Popup" groups=[
"Menu",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -150.0
margin_right = -162.0
margin_bottom = -110.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 400.0
margin_bottom = 300.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Label" type="Label" parent="NinePatchRect"]
margin_right = 400.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "MENU"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/CenterContainer"]
margin_top = 66.0
margin_right = 400.0
margin_bottom = 234.0
custom_constants/separation = 20

[node name="MusicToggleButton" type="CheckButton" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 70.0
rect_min_size = Vector2( 400, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover_pressed = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.211765, 0.0470588, 1 )
text = "Muted"

[node name="QuitButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 400.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.647059, 0.0862745, 1 )
text = "Quit"
flat = true

[node name="CloseMenuButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 400.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.647059, 0.0862745, 1 )
text = "Close menu"
flat = true
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/MusicToggleButton" to="." method="_on_MusicToggleButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/CloseMenuButton" to="." method="_on_CloseMenuButton_pressed"]
